--- a/sandbox/users/smironov/lab_1_pure.ipynb
+++ b/sandbox/users/smironov/lab_1_pure.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -102,6 +102,570 @@
    "source": [
     "**3. (0.5 балла)** Написать функцию, возвращающую максимальный элемент в массиве *x* среди элементов, перед которыми стоит нулевой. Для x = np.array([6, 2, 0, 3, 0, 0, 5, 7, 0]) ответом является 5. Если подходящих элементов нет, функция должна возвращать *None*."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#help(np.dstack)\n",
+    "#help(np.apply_along_axis)\n",
+    "\n",
+    "def max_element(arr):\n",
+    "    x = arr[1:]\n",
+    "    iy = np.where((arr[:-1] == 0))\n",
+    "    return np.max(x[iy])\n",
+    "\n",
+    "    \n",
+    "x = np.array([6, 2, 0, 3, 0, 0, 5, 7, 0])\n",
+    "max_element(x)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**4. (0.5 балла)** Реализуйте функцию, принимающую на вход матрицу *X* и некоторое число *v* и возвращающую ближайший к заданному числу элемент матрицы. Например, для X = np.arange(0,10).reshape((2, 5)) и v = 3.6 ответом будет 4."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def nearest_value(X, v):\n",
+    "    X1 = np.reshape(X, (1,-1))\n",
+    "    a = X1 - v\n",
+    "    return X1[:, (a*a).argmin() ]\n",
+    "\n",
+    "nearest_value(np.arange(0,10).reshape(2,5), 4.7 )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**5. (0.5 балла)** Реализуйте функцию, принимающую на вход матрицу *X* и возвращающую все её уникальные строки в виде матрицы."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def get_unique_rows(X):\n",
+    "    # Your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**6. (0.5 балла)** Реализуйте функцию, каторая во входной вещественной матрице *X* находит все значения *nan* и заменяет их на среднее арифметическое всех остальных элементов. В случае матрицы из одних *nan* произведите замену на нули."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[        nan         nan  0.45438436  0.0515955 ]\n",
+      " [        nan  0.57708277  0.90056031  0.02545071]\n",
+      " [ 0.42485823  0.21054821         nan  0.06516548]]\n",
+      "[[ 0.3387057   0.3387057   0.45438436  0.0515955 ]\n",
+      " [ 0.3387057   0.57708277  0.90056031  0.02545071]\n",
+      " [ 0.42485823  0.21054821  0.3387057   0.06516548]]\n",
+      "[ nan  nan]\n",
+      "[ 0.  0.]\n",
+      "[ nan  nan]\n",
+      "[ nan  nan]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/nix/store/njpicn24zjmad7wld6msl01g0wixr8sx-python3.5-numpy-1.11.1/lib/python3.5/site-packages/numpy/lib/nanfunctions.py:675: RuntimeWarning: Mean of empty slice\n",
+      "  warnings.warn(\"Mean of empty slice\", RuntimeWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def replace_nans(X):\n",
+    "    notnan = X[np.where(np.logical_not(np.isnan(X)))] \n",
+    "    if notnan.size == 0:\n",
+    "        X[::] = 0\n",
+    "    else:\n",
+    "        mean = np.mean( notnan )\n",
+    "        X[np.where(np.isnan(X))] = mean\n",
+    "    \n",
+    "    return X\n",
+    "\n",
+    "def replace_nans2(X):\n",
+    "    X[np.where(np.isnan(X))] = np.nanmean(X)\n",
+    "    return X\n",
+    "\n",
+    "#print(np.mean([]))\n",
+    "x = np.random.random((3,4))\n",
+    "x[([0,1,0,2],\n",
+    "   [0,0,1,2])] = np.nan\n",
+    "print(x)\n",
+    "print(replace_nans(x))\n",
+    " \n",
+    "x = np.array([np.nan, np.nan])\n",
+    "print(x)\n",
+    "print(replace_nans(x))\n",
+    "\n",
+    " \n",
+    "x = np.array([np.nan, np.nan])\n",
+    "print(x)\n",
+    "print(replace_nans2(x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**7. (0.5 балла)** Реализуйте функцию, принимающую на вход два одномерных массива *x* и *y* одинаковой длины и возвращающую матрицу, в которой первый массив соответствует первому столбцу матрицы, второй — второму. В этом задании *запрещается* пользоваться операцией транспонирования.\n",
+    "\n",
+    "Задачу нужно решить двумя разными способами, за решение только одним способом максимально возможная оценка — 0.4."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  4.],\n",
+       "       [ 1.,  5.],\n",
+       "       [ 2.,  6.],\n",
+       "       [ 3.,  7.]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def construct_matrix(x, y):\n",
+    "    R=np.zeros((x.size,2))\n",
+    "    #R[(np.arange(x.size, dtype=int),np.zeros(x.size, dtype=int))] = x\n",
+    "    #R[(np.arange(x.size, dtype=int),np.ones(x.size, dtype=int))] = y\n",
+    "    R[:,0] = x\n",
+    "    R[:,1] = y\n",
+    "    return R\n",
+    "\n",
+    "x = np.array([0,1,2,3])\n",
+    "y = np.array([4,5,6,7])\n",
+    "construct_matrix(x,y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**8. (1.5 балла)** Даны две вещественные матрицы *X* и *Y* с одинаковым числом столбцов и, в общем случае, различным числом строк. Необходимо реализовать функцию, вычисляющую матрицу попарных евклидовых расстояний между всеми элементами декартового произведения строк *X* и *Y*. Рекомендуется обратить внимание на функции *np.dot*, *np.repeat*, *np.reshape*, *np.transpose*, *np.sqrt*, *np.sum* и *np.power*. Но не запрещается пользоваться аналогами."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.65199981  0.52502504  0.44362196]\n",
+      " [ 0.13667895  0.6203558   0.600769  ]\n",
+      " [ 0.4123896   0.46694226  0.34974108]]\n",
+      "[[ 0.39441205  0.73948378  0.59761618]\n",
+      " [ 0.93225913  0.79182929  0.46471234]]\n",
+      "[[[ 0.65199981]\n",
+      "  [ 0.52502504]\n",
+      "  [ 0.44362196]]\n",
+      "\n",
+      " [[ 0.13667895]\n",
+      "  [ 0.6203558 ]\n",
+      "  [ 0.600769  ]]\n",
+      "\n",
+      " [[ 0.4123896 ]\n",
+      "  [ 0.46694226]\n",
+      "  [ 0.34974108]]]\n",
+      "[[[ 0.39441205  0.73948378]]\n",
+      "\n",
+      " [[ 0.59761618  0.93225913]]\n",
+      "\n",
+      " [[ 0.79182929  0.46471234]]]\n",
+      "Help on function repeat in module numpy.core.fromnumeric:\n",
+      "\n",
+      "repeat(a, repeats, axis=None)\n",
+      "    Repeat elements of an array.\n",
+      "    \n",
+      "    Parameters\n",
+      "    ----------\n",
+      "    a : array_like\n",
+      "        Input array.\n",
+      "    repeats : int or array of ints\n",
+      "        The number of repetitions for each element.  `repeats` is broadcasted\n",
+      "        to fit the shape of the given axis.\n",
+      "    axis : int, optional\n",
+      "        The axis along which to repeat values.  By default, use the\n",
+      "        flattened input array, and return a flat output array.\n",
+      "    \n",
+      "    Returns\n",
+      "    -------\n",
+      "    repeated_array : ndarray\n",
+      "        Output array which has the same shape as `a`, except along\n",
+      "        the given axis.\n",
+      "    \n",
+      "    See Also\n",
+      "    --------\n",
+      "    tile : Tile an array.\n",
+      "    \n",
+      "    Examples\n",
+      "    --------\n",
+      "    >>> x = np.array([[1,2],[3,4]])\n",
+      "    >>> np.repeat(x, 2)\n",
+      "    array([1, 1, 2, 2, 3, 3, 4, 4])\n",
+      "    >>> np.repeat(x, 3, axis=1)\n",
+      "    array([[1, 1, 1, 2, 2, 2],\n",
+      "           [3, 3, 3, 4, 4, 4]])\n",
+      "    >>> np.repeat(x, [1, 2], axis=0)\n",
+      "    array([[1, 2],\n",
+      "           [3, 4],\n",
+      "           [3, 4]])\n",
+      "\n",
+      "Help on built-in function dot in module numpy.core.multiarray:\n",
+      "\n",
+      "dot(...)\n",
+      "    dot(a, b, out=None)\n",
+      "    \n",
+      "    Dot product of two arrays.\n",
+      "    \n",
+      "    For 2-D arrays it is equivalent to matrix multiplication, and for 1-D\n",
+      "    arrays to inner product of vectors (without complex conjugation). For\n",
+      "    N dimensions it is a sum product over the last axis of `a` and\n",
+      "    the second-to-last of `b`::\n",
+      "    \n",
+      "        dot(a, b)[i,j,k,m] = sum(a[i,j,:] * b[k,:,m])\n",
+      "    \n",
+      "    Parameters\n",
+      "    ----------\n",
+      "    a : array_like\n",
+      "        First argument.\n",
+      "    b : array_like\n",
+      "        Second argument.\n",
+      "    out : ndarray, optional\n",
+      "        Output argument. This must have the exact kind that would be returned\n",
+      "        if it was not used. In particular, it must have the right type, must be\n",
+      "        C-contiguous, and its dtype must be the dtype that would be returned\n",
+      "        for `dot(a,b)`. This is a performance feature. Therefore, if these\n",
+      "        conditions are not met, an exception is raised, instead of attempting\n",
+      "        to be flexible.\n",
+      "    \n",
+      "    Returns\n",
+      "    -------\n",
+      "    output : ndarray\n",
+      "        Returns the dot product of `a` and `b`.  If `a` and `b` are both\n",
+      "        scalars or both 1-D arrays then a scalar is returned; otherwise\n",
+      "        an array is returned.\n",
+      "        If `out` is given, then it is returned.\n",
+      "    \n",
+      "    Raises\n",
+      "    ------\n",
+      "    ValueError\n",
+      "        If the last dimension of `a` is not the same size as\n",
+      "        the second-to-last dimension of `b`.\n",
+      "    \n",
+      "    See Also\n",
+      "    --------\n",
+      "    vdot : Complex-conjugating dot product.\n",
+      "    tensordot : Sum products over arbitrary axes.\n",
+      "    einsum : Einstein summation convention.\n",
+      "    matmul : '@' operator as method with out parameter.\n",
+      "    \n",
+      "    Examples\n",
+      "    --------\n",
+      "    >>> np.dot(3, 4)\n",
+      "    12\n",
+      "    \n",
+      "    Neither argument is complex-conjugated:\n",
+      "    \n",
+      "    >>> np.dot([2j, 3j], [2j, 3j])\n",
+      "    (-13+0j)\n",
+      "    \n",
+      "    For 2-D arrays it is the matrix product:\n",
+      "    \n",
+      "    >>> a = [[1, 0], [0, 1]]\n",
+      "    >>> b = [[4, 1], [2, 2]]\n",
+      "    >>> np.dot(a, b)\n",
+      "    array([[4, 1],\n",
+      "           [2, 2]])\n",
+      "    \n",
+      "    >>> a = np.arange(3*4*5*6).reshape((3,4,5,6))\n",
+      "    >>> b = np.arange(3*4*5*6)[::-1].reshape((5,4,6,3))\n",
+      "    >>> np.dot(a, b)[2,3,2,1,2,2]\n",
+      "    499128\n",
+      "    >>> sum(a[2,3,2,:] * b[1,2,:,2])\n",
+      "    499128\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_euclidean_distance(X, Y):\n",
+    "    # Your code here\n",
+    "    n,p = X.shape\n",
+    "    m,p = Y.shape\n",
+    "    print(X)\n",
+    "    print(Y)\n",
+    "    Xr = X.reshape(p,n,1)\n",
+    "    Yr = Y.reshape(p,1,m)\n",
+    "    print(Xr)\n",
+    "    print(Yr)\n",
+    "\n",
+    "a = np.random.random((3,3))\n",
+    "b = np.random.random((2,3))\n",
+    "\n",
+    "count_euclidean_distance(a,b)\n",
+    "\n",
+    "\n",
+    "help(np.repeat)\n",
+    "help(np.dot)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**9. (1 балл)** Написать функцию, которая получает на вход матрицу и масштабирует каждый её столбец, а именно вычитает из столбца его среднее значение и делит столбец на стандартное отклонение. Для тестирования можно сгенерировать с помощью метода *numpy.random.randint* случайную матрицу и проверить на ней работу метода.  Убедитесь, что в функции не будет происходить деления на ноль. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def scale(X):\n",
+    "    # Your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**10. (1 балл)** Реализуйте функцию, которая для заданной матрицы находит:\n",
+    " - определитель\n",
+    " - след\n",
+    " - наименьший и наибольший элементы\n",
+    " - норму Фробениуса\n",
+    " - собственные числа\n",
+    " - обратную матрицу\n",
+    "\n",
+    "Для тестирования сгенерируйте матрицу с элементами из нормального распределения *N*(10,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def get_stats(X):\n",
+    "    # Your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**11. (1 балл)** Повторите 100 раз следующий эксперимент: сгенерируйте две матрицы размера 10×10 из стандартного нормального распределения, перемножьте их (как матрицы) и найдите максимальный элемент. Какое среднее значение по экспериментам у максимальных элементов? 95-процентная квантиль? (в данной задаче можно использовать цикл только для повторения эксперимента) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (5 баллов) Pandas \n",
+    "\n",
+    "![](https://metrouk2.files.wordpress.com/2015/10/panda.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Загрузите данные о пассажирах Титаника из файлов *titanic_data.csv* и *titanic_surv.csv* и ответьте на вопросы ниже. Каждый ответ поясните.\n",
+    "\n",
+    "Информация о файлах: \n",
+    " - *titanic_data.csv* содержит различную информацию о пассажирах Титаника (билет, класс, возраст и т.п.)\n",
+    " - *titanic_surv.csv* содержит для каждого пассажира из первого файла информацию о том, выжил ли этот пассажир (метка 1) или нет (метка 0)\n",
+    "\n",
+    "**1. (1 балл)** Сделайте join двух датафреймов в один по полю индекса. Опишите данный датасет: какое расределение женщин/мужчин в нем? Сколько пассажиров ехало в каждом классе? Какой средний/минимальный/максимальный возраст пассажиров? Сколько было выживших пассажиров?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**2. (1 балл)** Верно ли, что женщины выживали чаще мужчин? Какие пассажиры выживали чаще: с более дешевыми или дорогими билетами? Верно ли, что чаще выживали более молодые пассажиры?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**3. (1 балл)** Сгруппируйте записи по классам пассажиров, в каждой группе посчитайте средний возраст. Верно ли, что во всех классах эта величина примерно одинакова?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**4. (2 балла)** Найдите все признаки, для которых есть пропуски в данных. Обычно алгоритмы по умолчанию не умеют обрабатывать такие данные. Предложите способы обработки данных с пропусками (не менее двух) и укажите достоинства/недостаки каждого. Проиллюстрируйте их на примере данного датасета."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (2 балла) Matplotlib\n",
+    "\n",
+    "Обратите внимание, что у графиков должны быть подписаны оси, заголовок графика и при необходимости обязательно наличие легенды. За отсутствие названий графиков и подписей к осям могут снижаться баллы. Все картинки должны быть самодостаточны и визуально удобны для восприятия, так чтобы не нужно было смотреть ваш код или знать задание, чтобы понять что на них изображено.\n",
+    "\n",
+    "![](https://imgs.xkcd.com/comics/convincing.png)\n",
+    "\n",
+    "**1. (1 балл)** Используя функцию *gen_uncertain_data* для генерации выборки, отобразите на графике синим цветом функцию *y(x)*, а также ее доверительный интервал в виде закрашенной зеленым цветом области от *y[i] - error[i]* до *y[i] + error[i]*. Полезной может оказаться функция *fill_between*.\n",
+    "\n",
+    "    def gen_uncertain_data():\n",
+    "        x = np.linspace(0, 30, 100)\n",
+    "        y = np.sin(x/6*np.pi) + np.random.normal(0, 0.02, size=x.shape)\n",
+    "        error = np.random.normal(0.1, 0.02, size=y.shape)\n",
+    "        return x, y, error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**2. (1 балл)** Отобразите гистограмму распределения возрастов для каждого класса пассажиров (здесь нужно использовать данные из заданий по pandas). В результате вы должны получить три гистограммы, которые необходимо отобразить рядом друг с другом используя функцию *plt.subplots*. Каждая гистограмма должна быть нормирована. Обратите внимание на параметры *figsize*, *sharey*, *sharex* функции *plt.subplots*. Также полезными могут оказаться параметры *bins*, *normed* функции *plt.hist*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
